<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorBackground"
    android:padding="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/congrats"
        android:textSize="18pt"
        android:textColor="?colorText"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/lbl_completed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:text="@string/completed"
        android:textColor="?colorText"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btn_new_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/cell"
        android:text="@string/new_game"
        android:textColor="?colorText"/>


</LinearLayout>